@@ -1,3 +1,9 @@
+2008-05-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dirinfo.c: Use TIFF_SETGET_ASCII for PIXAR_TEXTUREFORMAT
+	and PIXAR_WRAPMODES instead of TIFF_SETGET_UNDEFINED.  Not exactly clear
+	why this is needed. 
+
 2008-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Makefile.am (ACLOCAL_AMFLAGS): Libtool 2.2.4 does not like
